Fix for issue 47, sorting ajax-populated table columns

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -3,6 +3,8 @@
 <SCRIPT language="JavaScript">
 
 $(document).ready(function(){
+	featsRequested = featsReceived = 0; // mdb added 3/6/13 for issue #47
+	
 	$(".dialog_box").dialog({ autoOpen: false, width: 500 });
 
 	//Object Generation
@@ -148,6 +150,7 @@ function fill_nearby_feats(id,update) {
 		success : function(data) {
 			var obj = jQuery.parseJSON(data);
 			update_checkbox(obj.name, obj.distance, obj.hsp_id, obj.new_checkbox_info);
+			featsReceived++;
 		},
 	});		
 	if (update == "true") { update_sorting_table(); }
@@ -157,12 +160,14 @@ function click_all_feat_links(){
 	var link_str = pageObj.featlinks;
 	var link_array = new Array();
 	link_array = link_str.split(',');
-	for (var i = 0;i < link_array.length;i++) { //>
+	var count = 0;
+	for (var i = 0; i < link_array.length; i++) {
 		var val = link_array[i];
 		if (!val) {continue;}
 		fill_nearby_feats(link_array[i]);
+		count++;
 	}
-	update_sorting_table();
+	return count;
 }
  
 function update_sorting_table() {
@@ -170,6 +175,7 @@ function update_sorting_table() {
 		setTimeout("update_sorting_table()",100);
 		return;
 	}
+	
 	$("#hsp_result_table").trigger("update");
 }
 
@@ -638,12 +644,24 @@ function blastresults(html, click_all_links){
 		var table_height = $('#hsp_result_table_body').height();
 		var max_height = 400;
 		if (table_height > max_height) $('#hsp_result_table_body').height(max_height);
+	}
+	setup_button_states();
+	featsRequested = click_all_feat_links();
+	check_display();
+	
+	wait_on_feat_links();
+}
+
+// mdb added 3/6/13 for issue #47
+function wait_on_feat_links() {
+	console.log("matt " + featsReceived + " " + featsRequested);
+	if (featsReceived < featsRequested) {
+		setTimeout(wait_on_feat_links, 500);
+	}
+	else {
 		init_table();
 		init_table_opts();
 	}
-	setup_button_states();
-	click_all_feat_links();
-	check_display();
 }
 
 function init_table () {
