Non-functional change

--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -770,7 +770,7 @@ function toggle_star(img) {
 
 		<div style="float:left;color:gray;padding-top:5px;">
 			<div><b><TMPL_VAR NAME='FULL_NAME'></b></div>
-			<div class="small">username '<TMPL_VAR NAME='USER_NAME'>' (id<TMPL_VAR NAME='USER_ID'>)</div>
+			<div class="small">username <i><TMPL_VAR NAME='USER_NAME'></i>, id<TMPL_VAR NAME='USER_ID'></div>
 			<div class="small"><TMPL_VAR NAME='EMAIL'></div>
 		</div>
 		<!--<table style="float:left;white-space:nowrap;padding-right:5px;">
