updated displayed text

--- a/web/tmpl/ExperimentList.tmpl
+++ b/web/tmpl/ExperimentList.tmpl
@@ -92,7 +92,7 @@ function filter_rows (search_text){
 			$("#experiment_table_body tr:icontains('"+search_text+"')").hide(); 
 		}
 	}
-	$('#filter_count').html('Showing ' + $("#experiment_table_body tr:visible").length + ' of ' + $("#experiment_table_body tr").length + ' genomes');
+	$('#filter_count').html('Showing ' + $("#experiment_table_body tr:visible").length + ' of ' + $("#experiment_table_body tr").length + ' experiments');
 }
 	
 function experiment_checkboxes() {
