Non-functional change

--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -229,7 +229,7 @@ function export_bed (gid) {
 </table>
 <br>
 
-<span style="color:dimgray;font-weight:bold;">Experiments</span>
+<span style="color:dimgray;font-weight:bold;">Experiments</span><br>
 <TMPL_IF NAME='EXPERIMENTS'>
 	<table class="small ui-widget-content ui-corner-all">
 		<tr>
