--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -628,6 +628,10 @@ function synteny_zoom(dsgid1, dsgid2, basename, chr1, chr2, ksdb)
  var min = $('#zoom_min').val();
  var max = $('#zoom_max').val();
  var am = $('#axis_metric').val();
+ var fid1=0;
+ if (pageObj.fid1) {fid1 = pageObj.fid1;}
+ var fid2=0;
+ if (pageObj.fid2) {fid2 = pageObj.fid2;}
  var ct = $('#color_type').val();
     var loc = pageObj.loc;
     if (!loc) {loc=1;}
@@ -635,7 +639,7 @@ function synteny_zoom(dsgid1, dsgid2, basename, chr1, chr2, ksdb)
     pageObj.loc=loc;
     win = window.open ('DisplayMessage.pl', 'win'+loc,'width=400,height=200,scrollbars=1');
     win.focus();
-    get_dotplot(['args__url','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__ksdb','args__'+ksdb,'args__kstype','ks_type','args__min', 'args__'+min,'args__max', 'args__'+max, 'args__am', 'args__'+am, 'args__ct','args__'+ct, 'args__bd', 'args__'+$('#box_diags')[0].checked, 'args__color_scheme','color_scheme', 'args__am','axis_metric', 'args__ar','axis_relationship', ],[open_window]);
+    get_dotplot(['args__url','args__'+url, 'args__loc','args__'+loc, 'args__flip','args__'+$('#flip')[0].checked,'args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+width, 'args__ksdb','args__'+ksdb,'args__kstype','ks_type','args__min', 'args__'+min,'args__max', 'args__'+max, 'args__am', 'args__'+am, 'args__ct','args__'+ct, 'args__bd', 'args__'+$('#box_diags')[0].checked, 'args__color_scheme','color_scheme', 'args__am','axis_metric', 'args__ar','axis_relationship', 'args__fid1','args__'+fid1, 'args__fid2', 'args__'+fid2],[open_window]);
 
 }
 
