Fix for dup eid/gid in ajax call

--- a/web/tmpl/LoadGenome.tmpl
+++ b/web/tmpl/LoadGenome.tmpl
@@ -13,7 +13,7 @@ $(document).ready(function(){
 
 	$.ajaxSetup({
 		type: "POST",
-		//url: '<TMPL_VAR NAME='PAGE_NAME'>',
+		url: '<TMPL_VAR NAME='PAGE_NAME'>',
 		dataType: "html",
 		cache: false,
 	});
