--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -7,7 +7,7 @@
 $(document).ready(function(){
 	$.ajaxSetup({
 		type: "GET",
-		//url: '<TMPL_VAR NAME='PAGE_NAME'>',
+		url: '<TMPL_VAR NAME="PAGE_NAME">',
 		dataType: "html",
 		cache: false,
 	});
@@ -223,11 +223,24 @@ function export_bed (gid) {
 		<td style="padding-left:10px;">
 			<span id='genome_data' style="color:dimgray;font-weight:bold;">Genome Data</span>
 			<div class="small ui-widget-content ui-corner-all"><TMPL_VAR NAME="GENOME_DATA"></div>
-			<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('GenomeView.pl?dsgid=<TMPL_VAR NAME=GID>;chr=<TMPL_VAR NAME=CHR>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
+			<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('GenomeView.pl?dsgid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Genome View</span>
 		</td>
 	</tr>
 </table>
 <br>
+
+<span style="color:dimgray;font-weight:bold;">Annotation</span><br>
+<TMPL_IF NAME='ANNOTATION'>
+	<table class="small ui-widget-content ui-corner-all" style="color:gray;">
+		<tr>
+			<td>
+				<TMPL_VAR NAME='ANNOTATION'>
+			</td>
+		</tr>
+	</table>
+</TMPL_IF>
+<span class='ui-button ui-corner-all ui-button-icon-right' onclick="window.open('LoadAnnotation.pl?gid=<TMPL_VAR NAME=GID>')"><span class="ui-icon ui-icon-extlink"></span>Load Annotation</span>
+<br><br>
 
 <span style="color:dimgray;font-weight:bold;">Experiments</span><br>
 <TMPL_IF NAME='EXPERIMENTS'>
@@ -248,7 +261,7 @@ function export_bed (gid) {
 <div id="genome_groups_edit_box" class="dialog_box" title="Add Groups" style="display:none;"></div>
 
 <!--Added by Eric: 1/31/2013: dialog box for GFF exporter-->
-<DIV class="dialog_box" title="GFF Exporter" id="gff_export">
+<div class="dialog_box" title="GFF Exporter" id="gff_export" style="display:none;">
 <table class=small>
  <tr>
    <td>Do not generate features for ncRNA genes (CDS genes only)</td>
