--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -816,6 +816,7 @@ function toggle_star(img) {
 			<li><a onclick="create_group_dialog();">New Group</a></li>
 			<li><a onclick="create_notebook_dialog();">New Notebook</a></li>
 			<li><a onclick="window.open('LoadGenome.pl');">Load Genome</a></li>
+			<li><a onclick="window.open('LoadAnnotation.pl');">Load Annotation</a></li>
 			<li><a onclick="window.open('LoadExperiment.pl');">Load Experiment</a></li>
 		</ul>
 	</div>
